Update README.md
Add Important Changes and What's new sections